<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_friend"
        android:icon="@drawable/baseline_people_24"
        android:title="@string/title_friends" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_stats" />

</menu>
