<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_friend_email"
        android:text="email"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:textSize="18sp"
        android:gravity="center_vertical"/>

    <ImageButton
        android:id="@+id/btn_delete_friend"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/baseline_delete_black_24"
        android:layout_weight="1"
    />
</LinearLayout>
